--- a/AndroidUI/app/src/main/res/values/strings.xml
+++ b/AndroidUI/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">NewYorkerUI</string>
+    <string name="app_name"> NewYorkerUI </string>
+    <string name="string_textNewYorker" />
+    <string name="string_string_textnewyorker" />
+    <string name="new_yorker_v_gge">NEW YORKER VÆGGE</string>
+    <string name="opret_tilbud">Opret Tilbud</string>
+
 </resources>
