--- a/AndroidUI/app/src/main/res/values/strings.xml
+++ b/AndroidUI/app/src/main/res/values/strings.xml
@@ -4,5 +4,9 @@
     <string name="string_string_textnewyorker" />
     <string name="new_yorker_v_gge">NEW YORKER VÆGGE</string>
     <string name="opret_tilbud">Opret Tilbud</string>
+    <string name="m_l_angives_i_centimeter">Mål angives i centimeter</string>
+    <string name="m_l_angives_i_centimeter">Mål angives i centimeter</string>
+    <string name="indtast_bredten_p_v_ggen">Indtast bredten på væggen</string>
+    <string name="indtast_h_jden_p_v_ggen">Indtast højden på væggen</string>
 
 </resources>
