--- a/AndroidUI/app/src/main/res/values/strings.xml
+++ b/AndroidUI/app/src/main/res/values/strings.xml
@@ -27,5 +27,6 @@
     <string name="forhandler">Forhandler</string>
     <string name="pris">Pris</string>
     <string name="_47_dkr">47 DKR</string>
+    <string name="din_kommentar">Din kommentar</string>
 
 </resources>
