--- a/05 Implementation/New-Yorker designer app/app/src/main/res/values/strings.xml
+++ b/05 Implementation/New-Yorker designer app/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="indtast_h_jden_p_v_ggen">Indtast højden på væggen</string>
     <string name="afslut">AFSLUT</string>
     <string name="tak_for_bestillingen">Tak for bestillingen</string>
-    <string name="godkend_design">Godkend design</string>
+    <string name="OK">Godkend design</string>
     <string name="godkend_m_l">Godkend mål</string>
     <string name="send_bestilling">Send bestilling</string>
     <string name="navn">Navn</string>
