--- a/05 Implementation/New-Yorker designer app/app/src/main/res/values/strings.xml
+++ b/05 Implementation/New-Yorker designer app/app/src/main/res/values/strings.xml
@@ -35,15 +35,15 @@
     <string name="pris_4_700">Pris: 4.700,-</string>
     <string name="v_lg_en_type_af_d_r">Vælg en type af dør</string>
     <string name="enkeltd_r_uden_l_sekasse">Enkeltdør uden låsekasse</string>
-    <string name="dubeltd_r_uden_l_sekasse">dubeltdør uden låsekasse</string>
+    <string name="dubeltd_r_uden_l_sekasse">dobeltdør uden låsekasse</string>
     <string name="enkeltd_r_med_l_sekasse">enkeltdør med låsekasse</string>
     <string name="enkelt_skyded_r">enkelt skydedør</string>
     <string name="dubelt_skyded_r">dubelt skydedør</string>
-    <string name="dubeltd_r_med_l_sekasse">dubeltdør med låsekasse</string>
+    <string name="dubeltd_r_med_l_sekasse">dobeltdør med låsekasse</string>
     <string name="v_lg_d_r">Vælg dør</string>
-    <string name="dubbeltd_r_uden_l_sekasse">Dubbeltdør uden låsekasse</string>
-    <string name="dubbeltd_r_med_l_sekasse">Dubbeltdør med låsekasse</string>
-    <string name="dubbelt_skyded_r_uden_l_s">Dubbelt skydedør uden lås</string>
+    <string name="dubbeltd_r_uden_l_sekasse">Dobbeltdør uden låsekasse</string>
+    <string name="dubbeltd_r_med_l_sekasse">Dobbeltdør med låsekasse</string>
+    <string name="dubbelt_skyded_r_uden_l_s">Dobbelt skydedør uden lås</string>
     <string name="enkelt_skyded_r_uden_l_s">Enkelt skydedør uden lås</string>
     <string name="enkeltd_r_med_l_sekassee">Enkeltdør med låsekasse</string>
     <string name="messing_langgreb">Messing langgreb</string>
@@ -68,5 +68,6 @@
     <string name="indtast_bredden_p_v_ggen" />
     <string name="_0">0</string>
     <string name="v_lg_type_af_d_rgreb">Vælg type af dørgreb</string>
+    <string name="tilvalg_d_r">Tilvalg Dør</string>
 
 </resources>
