færdig med doorType at vise pris og lidt  Doorhandle class

--- a/05 Implementation/New-Yorker designer app/app/src/main/res/values/strings.xml
+++ b/05 Implementation/New-Yorker designer app/app/src/main/res/values/strings.xml
@@ -43,15 +43,14 @@
     <string name="v_lg_d_r">Vælg dør</string>
     <string name="dubbeltd_r_uden_l_sekasse">Dobbeltdør uden låsekasse</string>
     <string name="dubbeltd_r_med_l_sekasse">Dobbeltdør med låsekasse</string>
-    <string name="dubbelt_skyded_r_uden_l_s">Dobbelt skydedør uden lås</string>
-    <string name="enkelt_skyded_r_uden_l_s">Enkelt skydedør uden lås</string>
+    <string name="dubbelt_skyded_r_uden_l_s">Dobbelt skydedør</string>
+    <string name="enkelt_skyded_r_uden_l_s">Enkelt skydedør </string>
     <string name="enkeltd_r_med_l_sekassee">Enkeltdør med låsekasse</string>
-    <string name="messing_langgreb">Messing langgreb</string>
-    <string name="st_l_langgreb">Stål langgreb</string>
-    <string name="sort_langgreb">Sort langgreb</string>
-    <string name="st_l_langgreb_2_sidet">Stål langgreb 2 sidet</string>
-    <string name="sort_langgreb_to_sidet">Sort langgreb to sidet</string>
-    <string name="messing_langgreb_2_sidet">Messing langgreb 2 sidet</string>
+    <string name="messing_langgreb">Messing langgreb 1 side</string>
+    <string name="sort_langgreb">Sort langgreb 1 side</string>
+    <string name="ingen">Ingen doorgreb</string>
+    <string name="sort_langgreb_2_sider">Sort langgreb 2 sider</string>
+    <string name="messing_langgreb_2_sider">Messing langgreb 2 sider</string>
     <string name="v_lg_d_rh_ndtag">Vælg dørhåndtag</string>
     <string name="videre">Videre</string>
     <string name="v_lg_typen_af_glas_i_v_ggen">Vælg typen af glas i væggen</string>
