rettet stavefejl på UI

--- a/05 Implementation/New-Yorker designer app/app/src/main/res/values/strings.xml
+++ b/05 Implementation/New-Yorker designer app/app/src/main/res/values/strings.xml
@@ -72,5 +72,6 @@
     <string name="enkelt_door">EnkeltDør</string>
     <string name="chosenDoor">valgtDør</string>
     <string name="handle_chosen">handle</string>
+    <string name="se_katalog">Se katalog</string>
 
 </resources>
